# skey

./: README  README.cse376
skey/: AUTHORS  NEWS  configure.ac  runscript.sh
skey/man/: Makefile.am  key.1
skey/src/: Makefile.am  OLDMakefile  config-skey.sh  makefile.tmpl  md4.c  md4.h  put.c  skey.c  skey.h  skeyinit.c  skeylogin.c  skeysh.c  skeysubr.c  tester.sh
